--- a/Pandas-cookbook/cookbook-cn/08.第八章 解析Unix时间.ipynb
+++ b/Pandas-cookbook/cookbook-cn/08.第八章 解析Unix时间.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
        "4         /lib/x86_64-linux-gnu/libselinux.so.1             NaN  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,14 +170,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "每个 `numpy` 数组和 `pandas` 序列都有一个dtype` - 这通常是`int64，float64或object`。 一些可用的时间类型是`datetime64[s]，datetime64[ms]和datetime64[us]`。 与之相似，也有`timedelta`类型。\n",
+    "每个 `numpy` 数组和 `pandas` 序列都有一个`dtype` - 这通常是`int64，float64或object`。 一些可用的时间类型是`datetime64[s]，datetime64[ms]和datetime64[us]`。 与之相似，也有`timedelta`类型。\n",
     "\n",
     "我们可以使用`pd.to_datetime`函数将我们的整数时间戳转换为`datetimes`。 这是一个常量时间操作 - 我们实际上并不改变任何数据，只是改变了 Pandas 如何看待它。"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
        "dtype('<M8[ns]')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,11 +221,452 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>atime</th>\n",
+       "      <th>ctime</th>\n",
+       "      <th>package-name</th>\n",
+       "      <th>mru-program</th>\n",
+       "      <th>tag</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2013-12-17 15:56:37</td>\n",
+       "      <td>2013-05-04 02:07:40</td>\n",
+       "      <td>perl-base</td>\n",
+       "      <td>/usr/bin/perl</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2013-12-17 15:56:36</td>\n",
+       "      <td>2012-12-01 14:01:20</td>\n",
+       "      <td>login</td>\n",
+       "      <td>/bin/su</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2013-12-17 15:55:43</td>\n",
+       "      <td>2012-12-01 05:54:35</td>\n",
+       "      <td>libtalloc2</td>\n",
+       "      <td>/usr/lib/x86_64-linux-gnu/libtalloc.so.2.0.7</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2013-12-17 15:55:43</td>\n",
+       "      <td>2013-12-16 20:03:24</td>\n",
+       "      <td>libwbclient0</td>\n",
+       "      <td>/usr/lib/x86_64-linux-gnu/libwbclient.so.0</td>\n",
+       "      <td>&lt;RECENT-CTIME&gt;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2013-12-17 15:55:42</td>\n",
+       "      <td>2012-12-01 05:54:13</td>\n",
+       "      <td>libselinux1</td>\n",
+       "      <td>/lib/x86_64-linux-gnu/libselinux.so.1</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                atime               ctime  package-name  \\\n",
+       "0 2013-12-17 15:56:37 2013-05-04 02:07:40     perl-base   \n",
+       "1 2013-12-17 15:56:36 2012-12-01 14:01:20         login   \n",
+       "2 2013-12-17 15:55:43 2012-12-01 05:54:35    libtalloc2   \n",
+       "3 2013-12-17 15:55:43 2013-12-16 20:03:24  libwbclient0   \n",
+       "4 2013-12-17 15:55:42 2012-12-01 05:54:13   libselinux1   \n",
+       "\n",
+       "                                    mru-program             tag  \n",
+       "0                                 /usr/bin/perl             NaN  \n",
+       "1                                       /bin/su             NaN  \n",
+       "2  /usr/lib/x86_64-linux-gnu/libtalloc.so.2.0.7             NaN  \n",
+       "3    /usr/lib/x86_64-linux-gnu/libwbclient.so.0  <RECENT-CTIME>  \n",
+       "4         /lib/x86_64-linux-gnu/libselinux.so.1             NaN  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "popcon[:5]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "现在假设我们要查看所有不是库的软件包。\n",
+    "\n",
+    "首先，我想去掉一切带有时间戳 0 的东西。注意，我们可以在这个比较中使用一个字符串，即使它实际上在里面是一个时间戳。这是因为 Pandas 是非常厉害的。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>atime</th>\n",
+       "      <th>ctime</th>\n",
+       "      <th>package-name</th>\n",
+       "      <th>mru-program</th>\n",
+       "      <th>tag</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2013-12-17 15:56:37</td>\n",
+       "      <td>2013-05-04 02:07:40</td>\n",
+       "      <td>perl-base</td>\n",
+       "      <td>/usr/bin/perl</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2013-12-17 15:56:36</td>\n",
+       "      <td>2012-12-01 14:01:20</td>\n",
+       "      <td>login</td>\n",
+       "      <td>/bin/su</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2013-12-17 15:55:43</td>\n",
+       "      <td>2012-12-01 05:54:35</td>\n",
+       "      <td>libtalloc2</td>\n",
+       "      <td>/usr/lib/x86_64-linux-gnu/libtalloc.so.2.0.7</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2013-12-17 15:55:43</td>\n",
+       "      <td>2013-12-16 20:03:24</td>\n",
+       "      <td>libwbclient0</td>\n",
+       "      <td>/usr/lib/x86_64-linux-gnu/libwbclient.so.0</td>\n",
+       "      <td>&lt;RECENT-CTIME&gt;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2013-12-17 15:55:42</td>\n",
+       "      <td>2012-12-01 05:54:13</td>\n",
+       "      <td>libselinux1</td>\n",
+       "      <td>/lib/x86_64-linux-gnu/libselinux.so.1</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2093</th>\n",
+       "      <td>2010-10-15 16:41:50</td>\n",
+       "      <td>2012-12-01 05:54:37</td>\n",
+       "      <td>pptp-linux</td>\n",
+       "      <td>/usr/sbin/pptp</td>\n",
+       "      <td>&lt;OLD&gt;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2094</th>\n",
+       "      <td>2010-06-08 10:06:29</td>\n",
+       "      <td>2012-12-01 05:54:57</td>\n",
+       "      <td>libfile-basedir-perl</td>\n",
+       "      <td>/usr/share/perl5/File/BaseDir.pm</td>\n",
+       "      <td>&lt;OLD&gt;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2095</th>\n",
+       "      <td>2010-03-06 14:44:18</td>\n",
+       "      <td>2012-12-01 05:54:37</td>\n",
+       "      <td>laptop-detect</td>\n",
+       "      <td>/usr/sbin/laptop-detect</td>\n",
+       "      <td>&lt;OLD&gt;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2096</th>\n",
+       "      <td>2010-02-22 14:59:21</td>\n",
+       "      <td>2012-12-01 05:54:14</td>\n",
+       "      <td>libfribidi0</td>\n",
+       "      <td>/usr/bin/fribidi</td>\n",
+       "      <td>&lt;OLD&gt;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2097</th>\n",
+       "      <td>2008-11-20 14:38:20</td>\n",
+       "      <td>2012-12-01 05:54:57</td>\n",
+       "      <td>libfile-copy-recursive-perl</td>\n",
+       "      <td>/usr/share/perl5/File/Copy/Recursive.pm</td>\n",
+       "      <td>&lt;OLD&gt;</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2098 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   atime               ctime                 package-name  \\\n",
+       "0    2013-12-17 15:56:37 2013-05-04 02:07:40                    perl-base   \n",
+       "1    2013-12-17 15:56:36 2012-12-01 14:01:20                        login   \n",
+       "2    2013-12-17 15:55:43 2012-12-01 05:54:35                   libtalloc2   \n",
+       "3    2013-12-17 15:55:43 2013-12-16 20:03:24                 libwbclient0   \n",
+       "4    2013-12-17 15:55:42 2012-12-01 05:54:13                  libselinux1   \n",
+       "...                  ...                 ...                          ...   \n",
+       "2093 2010-10-15 16:41:50 2012-12-01 05:54:37                   pptp-linux   \n",
+       "2094 2010-06-08 10:06:29 2012-12-01 05:54:57         libfile-basedir-perl   \n",
+       "2095 2010-03-06 14:44:18 2012-12-01 05:54:37                laptop-detect   \n",
+       "2096 2010-02-22 14:59:21 2012-12-01 05:54:14                  libfribidi0   \n",
+       "2097 2008-11-20 14:38:20 2012-12-01 05:54:57  libfile-copy-recursive-perl   \n",
+       "\n",
+       "                                       mru-program             tag  \n",
+       "0                                    /usr/bin/perl             NaN  \n",
+       "1                                          /bin/su             NaN  \n",
+       "2     /usr/lib/x86_64-linux-gnu/libtalloc.so.2.0.7             NaN  \n",
+       "3       /usr/lib/x86_64-linux-gnu/libwbclient.so.0  <RECENT-CTIME>  \n",
+       "4            /lib/x86_64-linux-gnu/libselinux.so.1             NaN  \n",
+       "...                                            ...             ...  \n",
+       "2093                                /usr/sbin/pptp           <OLD>  \n",
+       "2094              /usr/share/perl5/File/BaseDir.pm           <OLD>  \n",
+       "2095                       /usr/sbin/laptop-detect           <OLD>  \n",
+       "2096                              /usr/bin/fribidi           <OLD>  \n",
+       "2097       /usr/share/perl5/File/Copy/Recursive.pm           <OLD>  \n",
+       "\n",
+       "[2098 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "popcon = popcon[popcon['atime']>'1970-01-01']\n",
+    "popcon"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "现在我们可以使用 pandas 的魔法字符串功能来查看包名称不包含lib的行"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>atime</th>\n",
+       "      <th>ctime</th>\n",
+       "      <th>package-name</th>\n",
+       "      <th>mru-program</th>\n",
+       "      <th>tag</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>57</th>\n",
+       "      <td>2013-12-17 04:55:39</td>\n",
+       "      <td>2013-12-17 04:55:42</td>\n",
+       "      <td>ddd</td>\n",
+       "      <td>/usr/bin/ddd</td>\n",
+       "      <td>&lt;RECENT-CTIME&gt;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>450</th>\n",
+       "      <td>2013-12-16 20:03:20</td>\n",
+       "      <td>2013-12-16 20:05:13</td>\n",
+       "      <td>nodejs</td>\n",
+       "      <td>/usr/bin/npm</td>\n",
+       "      <td>&lt;RECENT-CTIME&gt;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>454</th>\n",
+       "      <td>2013-12-16 20:03:20</td>\n",
+       "      <td>2013-12-16 20:05:04</td>\n",
+       "      <td>switchboard-plug-keyboard</td>\n",
+       "      <td>/usr/lib/plugs/pantheon/keyboard/options.txt</td>\n",
+       "      <td>&lt;RECENT-CTIME&gt;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>445</th>\n",
+       "      <td>2013-12-16 20:03:20</td>\n",
+       "      <td>2013-12-16 20:05:04</td>\n",
+       "      <td>thunderbird-locale-en</td>\n",
+       "      <td>/usr/lib/thunderbird-addons/extensions/langpac...</td>\n",
+       "      <td>&lt;RECENT-CTIME&gt;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>396</th>\n",
+       "      <td>2013-12-16 20:08:27</td>\n",
+       "      <td>2013-12-16 20:05:03</td>\n",
+       "      <td>software-center</td>\n",
+       "      <td>/usr/sbin/update-software-center</td>\n",
+       "      <td>&lt;RECENT-CTIME&gt;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>449</th>\n",
+       "      <td>2013-12-16 20:03:20</td>\n",
+       "      <td>2013-12-16 20:05:00</td>\n",
+       "      <td>samba-common-bin</td>\n",
+       "      <td>/usr/bin/net.samba3</td>\n",
+       "      <td>&lt;RECENT-CTIME&gt;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>397</th>\n",
+       "      <td>2013-12-16 20:08:25</td>\n",
+       "      <td>2013-12-16 20:04:59</td>\n",
+       "      <td>postgresql-client-9.1</td>\n",
+       "      <td>/usr/lib/postgresql/9.1/bin/psql</td>\n",
+       "      <td>&lt;RECENT-CTIME&gt;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>398</th>\n",
+       "      <td>2013-12-16 20:08:23</td>\n",
+       "      <td>2013-12-16 20:04:58</td>\n",
+       "      <td>postgresql-9.1</td>\n",
+       "      <td>/usr/lib/postgresql/9.1/bin/postmaster</td>\n",
+       "      <td>&lt;RECENT-CTIME&gt;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>452</th>\n",
+       "      <td>2013-12-16 20:03:20</td>\n",
+       "      <td>2013-12-16 20:04:55</td>\n",
+       "      <td>php5-dev</td>\n",
+       "      <td>/usr/include/php5/main/snprintf.h</td>\n",
+       "      <td>&lt;RECENT-CTIME&gt;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>440</th>\n",
+       "      <td>2013-12-16 20:03:20</td>\n",
+       "      <td>2013-12-16 20:04:54</td>\n",
+       "      <td>php-pear</td>\n",
+       "      <td>/usr/share/php/XML/Util.php</td>\n",
+       "      <td>&lt;RECENT-CTIME&gt;</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  atime               ctime               package-name  \\\n",
+       "57  2013-12-17 04:55:39 2013-12-17 04:55:42                        ddd   \n",
+       "450 2013-12-16 20:03:20 2013-12-16 20:05:13                     nodejs   \n",
+       "454 2013-12-16 20:03:20 2013-12-16 20:05:04  switchboard-plug-keyboard   \n",
+       "445 2013-12-16 20:03:20 2013-12-16 20:05:04      thunderbird-locale-en   \n",
+       "396 2013-12-16 20:08:27 2013-12-16 20:05:03            software-center   \n",
+       "449 2013-12-16 20:03:20 2013-12-16 20:05:00           samba-common-bin   \n",
+       "397 2013-12-16 20:08:25 2013-12-16 20:04:59      postgresql-client-9.1   \n",
+       "398 2013-12-16 20:08:23 2013-12-16 20:04:58             postgresql-9.1   \n",
+       "452 2013-12-16 20:03:20 2013-12-16 20:04:55                   php5-dev   \n",
+       "440 2013-12-16 20:03:20 2013-12-16 20:04:54                   php-pear   \n",
+       "\n",
+       "                                           mru-program             tag  \n",
+       "57                                        /usr/bin/ddd  <RECENT-CTIME>  \n",
+       "450                                       /usr/bin/npm  <RECENT-CTIME>  \n",
+       "454       /usr/lib/plugs/pantheon/keyboard/options.txt  <RECENT-CTIME>  \n",
+       "445  /usr/lib/thunderbird-addons/extensions/langpac...  <RECENT-CTIME>  \n",
+       "396                   /usr/sbin/update-software-center  <RECENT-CTIME>  \n",
+       "449                                /usr/bin/net.samba3  <RECENT-CTIME>  \n",
+       "397                   /usr/lib/postgresql/9.1/bin/psql  <RECENT-CTIME>  \n",
+       "398             /usr/lib/postgresql/9.1/bin/postmaster  <RECENT-CTIME>  \n",
+       "452                  /usr/include/php5/main/snprintf.h  <RECENT-CTIME>  \n",
+       "440                        /usr/share/php/XML/Util.php  <RECENT-CTIME>  "
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nonlibraries = popcon[~popcon['package-name'].str.contains('lib')]\n",
+    "\n",
+    "nonlibraries.sort_values('ctime', ascending=False)[:10]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "好吧，很酷，它说我最近安装了ddd。 和postgresql！ 我记得安装这些东西。\n",
+    "\n",
+    "这里的整个消息是，如果你有一个以秒或毫秒或纳秒为单位的时间戳，那么你可以“转换”到datetime64 [the-right-thing]，并且 pandas/numpy 将处理其余的事情。"
    ]
   }
  ],
