--- a/Pandas-cookbook/cookbook-cn/09.第九章 数据库读写数据.ipynb
+++ b/Pandas-cookbook/cookbook-cn/09.第九章 数据库读写数据.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 第九章 数据库读写数据"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,25 +21,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 9.1 Reading data from SQL databases"
+    "## 9.1 读取sqlite 数据库"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So far we've only talked about reading data from CSV files. That's a pretty common way to store data, but there are many others! Pandas can read from HTML, JSON, SQL, Excel (!!!), HDF5, Stata, and a few other things. In this chapter we'll talk about reading data from SQL databases.\n",
+    "到目前为止，我们只涉及从 CSV 文件中读取数据。 这是一个存储数据的常见方式，但有很多其它方式！ Pandas 可以从 `HTML，JSON，SQL，Excel（!!!），HDF5，Stata` 和其他一些东西中读取数据。 在本章中，我们将讨论从 SQL 数据库读取数据。\n",
     "\n",
-    "You can read data from a SQL database using the `pd.read_sql` function. `read_sql` will automatically convert SQL column names to DataFrame column names.\n",
+    "您可以使用`pd.read_sql`函数从 SQL 数据库读取数据。 `read_sql`将自动将 SQL 列名转换为DataFrame列名。\n",
     "\n",
-    "`read_sql` takes 2 arguments: a `SELECT` statement, and a database connection object. This is great because it means you can read from *any* kind of SQL database -- it doesn't matter if it's MySQL, SQLite, PostgreSQL, or something else.\n",
+    "read_sql需要 2 个参数：SELECT语句和数据库连接对象。 这是极好的，因为它意味着你可以从任何种类的 SQL 数据库读取 - 无论是 `MySQL，SQLite，PostgreSQL `或其他东西。\n",
     "\n",
-    "This example reads from a SQLite database, but any other database would work the same way."
+    "此示例从 SQLite 数据库读取，但任何其他数据库将以相同的方式工作。"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +98,7 @@
        "2   3  2012-01-01 02:00:00  -1.8"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,21 +106,21 @@
    "source": [
     "con = sqlite3.connect(\"../data/weather_2012.sqlite\")\n",
     "df = pd.read_sql(\"SELECT * from weather_2012 LIMIT 3\", con)\n",
-    "df"
+    "df\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`read_sql` doesn't automatically set the primary key (`id`) to be the index of the dataframe. You can make it do that by adding an `index_col` argument to `read_sql`. \n",
+    "`read_sql`不会自动将主键`（id）`设置为`DataFrame`的索引。 你可以通过向`read_sql`添加一个`index_col`参数来实现。\n",
     "\n",
-    "If you've used `read_csv` a lot, you may have seen that it has an `index_col` argument as well. This one behaves the same way."
+    "如果你大量使用read_csv，你可能已经看到它有一个index_col参数。 这个行为是一样的。"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -174,26 +181,26 @@
        "3   2012-01-01 02:00:00  -1.8"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_sql(\"SELECT * from weather_2012 LIMIT 3\", con, index_col='id')\n",
-    "df"
+    "df = pd.read_sql(\"select * from weather_2012 limit 3\", con, index_col='id')\n",
+    "df "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you want your dataframe to be indexed by more than one column, you can give a list of columns to `index_col`:"
+    "如果希望`DataFrame`由多个列索引，可以将列的列表提供给`index_col`："
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -254,36 +261,29 @@
        "3  2012-01-01 02:00:00  -1.8"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_sql(\"SELECT * from weather_2012 LIMIT 3\", con, \n",
-    "                 index_col=['id', 'date_time'])\n",
-    "df"
+    "df = pd.read_sql(\"select * from weather_2012 limit 3\",con, index_col=['id','date_time'])\n",
+    "df "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 9.2 Writing to a SQLite database"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Pandas has a `write_frame` function which creates a database table from a dataframe. Right now this only works for SQLite databases. Let's use it to move our 2012 weather data into SQL.\n",
+    "## 9.2 写入 SQLite 数据库\n",
+    "Pandas 拥有`write_frame`函数，它从`DataFrame`创建一个数据库表。 现在这只适用于 `SQLite` 数据库。 让我们使用它，来将我们的 2012 天气数据转换为 SQL。\n",
     "\n",
-    "You'll notice that this function is in `pd.io.sql`. There are a ton of useful functions for reading and writing various kind of data in `pd.io`, and it's worth spending some time exploring them. ([see the documentation!](http://pandas.pydata.org/pandas-docs/stable/io.html))"
+    "你会注意到这个函数在`pd.io.sql`中。 在`pd.io`中有很多有用的函数，用于读取和写入各种类型的数据，值得花一些时间来探索它们。 （请参阅文档！）"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -292,28 +292,28 @@
        "8784"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "weather_df = pd.read_csv('../data/weather_2012.csv')\n",
-    "con = sqlite3.connect(\"../data/test_db.sqlite\")\n",
-    "con.execute(\"DROP TABLE IF EXISTS weather_2012\")\n",
-    "weather_df.to_sql(\"weather_2012\", con)"
+    "con = sqlite3.connect('../data/test_db.sqlite')\n",
+    "con.execute(\"drop table if exists weather_2012\")\n",
+    "weather_df.to_sql(\"weather_2012\",con)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can now read from the `weather_2012` table in  `test_db.sqlite`, and we see that we get the same data back:"
+    "我们现在可以从test_db.sqlite中的weather_2012表中读取数据，我们看到我们得到了相同的数据："
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -401,27 +401,27 @@
        "2                7              4.0           101.26  Freezing Drizzle,Fog  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "con = sqlite3.connect(\"../data/test_db.sqlite\")\n",
-    "df = pd.read_sql(\"SELECT * from weather_2012 LIMIT 3\", con)\n",
-    "df"
+    "con = sqlite3.connect('../data/test_db.sqlite')\n",
+    "df = pd.read_sql(\"select * from weather_2012 limit 3\",con)\n",
+    "df "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The nice thing about having your data in a database is that you can do arbitrary SQL queries. This is cool especially if you're more familiar with SQL. Here's an example of sorting by the Weather column:"
+    "在数据库中保存数据的好处在于，可以执行任意的 SQL 查询。 这非常酷，特别是如果你更熟悉 SQL 的情况下。 以下是Weather列排序的示例："
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -509,7 +509,7 @@
        "2                7             25.0           100.80   Clear  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -524,32 +524,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you have a PostgreSQL database or MySQL database, reading from it works exactly the same way as reading from a SQLite database. You create a connection using `psycopg2.connect()` or `MySQLdb.connect()`, and then use\n",
-    "\n",
-    "`pd.read_sql(\"SELECT whatever from your_table\", con)`"
+    "如果你有一个 PostgreSQL 数据库或 MySQL 数据库，从它读取的工作方式与从 SQLite 数据库读取完全相同。 使用psycopg2.connect()或MySQLdb.connect()创建连接，然后使用"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.read_sql(\"SELECT whatever from your_table\", con)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 9.3 Connecting to other kinds of database"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "To connect to a MySQL database:\n",
+    "## 9.3 连接到其它类型的数据库\n",
+    "为了连接到 MySQL 数据库：\n",
     "\n",
-    "*Note: For these to work, you will need a working MySQL / PostgreSQL database, with the correct localhost, database name, etc.*"
+    "注：为了使其正常工作，你需要拥有 MySQL/PostgreSQL 数据库，并带有正确的localhost，数据库名称，以及其他。"
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "import MySQLdb\n",
+    "import MySQLdb \n",
     "con = MySQLdb.connect(host=\"localhost\", db=\"test\")"
    ]
   },
@@ -557,68 +560,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To connect to a PostgreSQL database:"
+    "为了连接到 PostgreSQL 数据库："
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "import psycopg2\n",
+    "import psycopg2 \n",
     "con = psycopg2.connect(host=\"localhost\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<style>\n",
-    "    @font-face {\n",
-    "        font-family: \"Computer Modern\";\n",
-    "        src: url('http://mirrors.ctan.org/fonts/cm-unicode/fonts/otf/cmunss.otf');\n",
-    "    }\n",
-    "    div.cell{\n",
-    "        width:800px;\n",
-    "        margin-left:16% !important;\n",
-    "        margin-right:auto;\n",
-    "    }\n",
-    "    h1 {\n",
-    "        font-family: Helvetica, serif;\n",
-    "    }\n",
-    "    h4{\n",
-    "        margin-top:12px;\n",
-    "        margin-bottom: 3px;\n",
-    "       }\n",
-    "    div.text_cell_render{\n",
-    "        font-family: Computer Modern, \"Helvetica Neue\", Arial, Helvetica, Geneva, sans-serif;\n",
-    "        line-height: 145%;\n",
-    "        font-size: 130%;\n",
-    "        width:800px;\n",
-    "        margin-left:auto;\n",
-    "        margin-right:auto;\n",
-    "    }\n",
-    "    .CodeMirror{\n",
-    "            font-family: \"Source Code Pro\", source-code-pro,Consolas, monospace;\n",
-    "    }\n",
-    "    .text_cell_render h5 {\n",
-    "        font-weight: 300;\n",
-    "        font-size: 22pt;\n",
-    "        color: #4057A1;\n",
-    "        font-style: italic;\n",
-    "        margin-bottom: .5em;\n",
-    "        margin-top: 0.5em;\n",
-    "        display: block;\n",
-    "    }\n",
-    "    \n",
-    "    .warning{\n",
-    "        color: rgb( 240, 20, 20 )\n",
-    "        }  "
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 64-bit",
+   "display_name": "Python 3.9.13 ('JupyterNotebook-5PCSqSH0')",
    "language": "python",
    "name": "python3"
   },
@@ -634,12 +592,13 @@
    "pygments_lexer": "ipython3",
    "version": "3.9.13"
   },
+  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "b0fa6594d8f4cbf19f97940f81e996739fb7646882a419484c72d19e05852a7e"
+    "hash": "c57bdfac97ca45c05f862af0e07e2a609dfb06d83bc5ec7dd8d02f8ae1750a09"
    }
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 2
 }
